Add telegram bot

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -15,11 +15,11 @@
 - [x] Створити функцію для заповнення бази даних тестовими даними при першому запуску (приклади витрат та ліміти для категорій)
 
 ## 3. Розробка Telegram бота
-- [ ] Створити модуль telegram_bot
-- [ ] Налаштувати bot.py для ініціалізації та запуску бота
-- [ ] Створити базові хендлери для обробки команд (/start, /help)
-- [ ] Створити хендлери для обробки голосових повідомлень
-- [ ] Створити хендлери для обробки текстових повідомлень
+- [x] Створити модуль telegram_bot
+- [x] Налаштувати bot.py для ініціалізації та запуску бота
+- [x] Створити базові хендлери для обробки команд (/start, /help)
+- [x] Створити хендлери для обробки голосових повідомлень
+- [x] Створити хендлери для обробки текстових повідомлень
 
 ## 4. Інтеграція з Whisper API
 - [ ] Створити модуль whisper_transcriber
