--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -22,68 +22,68 @@
 - [x] Створити хендлери для обробки текстових повідомлень
 
 ## 4. Інтеграція з Whisper API
-- [ ] Створити модуль whisper_transcriber
-- [ ] Налаштувати transcriber.py для взаємодії з Whisper API
-- [ ] Створити функцію для завантаження та обробки голосових повідомлень
-- [ ] Реалізувати функцію для транскрипції голосу в текст українською
+- [x] Створити модуль whisper_transcriber
+- [x] Налаштувати transcriber.py для взаємодії з Whisper API
+- [x] Створити функцію для завантаження та обробки голосових повідомлень
+- [x] Реалізувати функцію для транскрипції голосу в текст українською
 
 ## 5. Розробка AI-агента
-- [ ] Створити модуль ai_agent
-- [ ] Налаштувати intent_classifier.py для класифікації намірів користувача:
-  - [ ] Розпізнавання запису витрат
-  - [ ] Розпізнавання запитів на аналітику
-  - [ ] Розпізнавання непідтримуваних запитів
-- [ ] Налаштувати expense_parser.py для витягування інформації про витрати:
-  - [ ] Визначення суми
-  - [ ] Визначення категорії
-  - [ ] Визначення опису
-  - [ ] Визначення дати (якщо вказана)
-- [ ] Налаштувати analytics_agent.py для аналізу витрат:
-  - [ ] Аналіз витрат по категоріях
-  - [ ] Перевірка перевищення лімітів
-  - [ ] Формування текстових відповідей на аналітичні запити
+- [x] Створити модуль ai_agent
+- [x] Налаштувати intent_classifier.py для класифікації намірів користувача:
+  - [x] Розпізнавання запису витрат
+  - [x] Розпізнавання запитів на аналітику
+  - [x] Розпізнавання непідтримуваних запитів
+- [x] Налаштувати expense_parser.py для витягування інформації про витрати:
+  - [x] Визначення суми
+  - [x] Визначення категорії
+  - [x] Визначення опису
+  - [x] Визначення дати (якщо вказана)
+- [x] Налаштувати analytics_agent.py для аналізу витрат:
+  - [x] Аналіз витрат по категоріях
+  - [x] Перевірка перевищення лімітів
+  - [x] Формування текстових відповідей на аналітичні запити
 
 ## 6. Розробка утиліт та допоміжних функцій
-- [ ] Створити модуль utils
-- [ ] Реалізувати helpers.py з корисними функціями:
-  - [ ] Форматування дат
-  - [ ] Валідація даних
-  - [ ] Логування
+- [x] Створити модуль utils
+- [x] Реалізувати helpers.py з корисними функціями:
+  - [x] Форматування дат
+  - [x] Валідація даних
+  - [x] Логування
 
 ## 7. Налаштування конфігурації
-- [ ] Створити модуль config
-- [ ] Налаштувати settings.py для зберігання параметрів додатку:
-  - [ ] Конфігурація бази даних
-  - [ ] API ключі
-  - [ ] Стандартні ліміти по категоріях
-  - [ ] Інші налаштування
+- [x] Створити модуль config
+- [x] Налаштувати settings.py для зберігання параметрів додатку:
+  - [x] Конфігурація бази даних
+  - [x] API ключі
+  - [x] Стандартні ліміти по категоріях
+  - [x] Інші налаштування
 
 ## 8. Розробка логіки обробки і збереження витрат
-- [ ] Реалізувати повний цикл обробки голосових повідомлень:
-  - [ ] Отримання голосового повідомлення -> транскрипція -> аналіз -> збереження
-- [ ] Реалізувати логіку перевірки лімітів при додаванні нової витрати
-- [ ] Реалізувати сповіщення про перевищення лімітів
+- [x] Реалізувати повний цикл обробки голосових повідомлень:
+  - [x] Отримання голосового повідомлення -> транскрипція -> аналіз -> збереження
+- [x] Реалізувати логіку перевірки лімітів при додаванні нової витрати
+- [x] Реалізувати сповіщення про перевищення лімітів
 
 ## 9. Розробка аналітичних можливостей
-- [ ] Реалізувати обробку аналітичних запитів:
-  - [ ] Аналіз витрат за період
-  - [ ] Аналіз витрат по категорії
-  - [ ] Відображення залишку в межах лімітів
+- [x] Реалізувати обробку аналітичних запитів:
+  - [x] Аналіз витрат за період
+  - [x] Аналіз витрат по категорії
+  - [x] Відображення залишку в межах лімітів
 
 ## 10. Тестування
-- [ ] Створити модуль tests
-- [ ] Написати тести для LLM-парсера витрат
-- [ ] Написати тести для взаємодії з Telegram ботом
-- [ ] Написати тести для запитів до бази даних
-- [ ] Провести інтеграційне тестування всіх компонентів
+- [x] Створити модуль tests
+- [x] Написати тести для LLM-парсера витрат
+- [x] Написати тести для взаємодії з Telegram ботом
+- [x] Написати тести для запитів до бази даних
+- [x] Провести інтеграційне тестування всіх компонентів
 
 ## 11. Фінальна інтеграція та запуск
-- [ ] Створити run.py для запуску додатку
-- [ ] Налаштувати логування
-- [ ] Перевірити всі компоненти на взаємодію
-- [ ] Протестувати додаток у реальних умовах
+- [x] Створити run.py для запуску додатку
+- [x] Налаштувати логування
+- [x] Перевірити всі компоненти на взаємодію
+- [x] Протестувати додаток у реальних умовах
 
 ## 12. Документація
-- [ ] Створити README.md з описом проєкту та інструкціями з встановлення
-- [ ] Додати коментарі до коду
-- [ ] Підготувати документацію з користування ботом
+- [x] Створити README.md з описом проєкту та інструкціями з встановлення
+- [x] Додати коментарі до коду
+- [x] Підготувати документацію з користування ботом
